# .study.rust.game

walk-the-dog/: Cargo.toml  package-lock.json  package.json  webpack.config.js
walk-the-dog/src/: browser.rs  engine.rs  lib.rs
walk-the-dog/static/: index.html
