[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = '0.2.10', features=["js"] }
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
futures = "0.3.28"
js-sys = "0.3.64"
